--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+abi = { version = "0.1.0", path = "../abi" }
 thiserror = "1.0.61"
+
+[dependencies.sqlx]
+version = "0.7.4"
+features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid"]
