--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 abi = { version = "0.1.0", path = "../abi" }
+async-trait = "0.1.80"
 thiserror = "1.0.61"
 
 [dependencies.sqlx]
